--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ jobs:
     # Install ffmpeg so we can capture a video of the display as the tests run
     - sudo add-apt-repository -y ppa:mc3man/trusty-media
     - sudo apt-get -qq update
-    - sudo apt-get install -y ffmpeg
+    - sudo apt-get install -y ffmpeg > ./ffmpeg.log &
     script:
     - "./deploy/ci/travis/fetch-depcache.sh"
     - "./deploy/ci/travis/run-e2e-tests.sh video"
